--- a/src/styles/ForecastView.css
+++ b/src/styles/ForecastView.css
@@ -3,6 +3,7 @@
   height: 35px;
   border: 0;
   border-radius: 0 !important;
+  background: #ebebeb;
   margin-top: 15px;
   margin-bottom: 15px;
   font-size: 17px;
