--- a/src/styles/InputForm.css
+++ b/src/styles/InputForm.css
@@ -25,7 +25,7 @@
 
 .App-body > div > form > input[type=submit] {
   font-size: 16px;
-  border: 0;
+  border: 0 !important;
   border-radius: 0 !important;
   width: 130px;
   height: 30px;
